--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:onClick="button"
+        android:contentDescription="@string/pref_add_button_desc"
         android:src="@drawable/fab_plus"
         app:backgroundTint="@color/material_blue_500"
         app:borderWidth="0dp"
