--- a/app/src/main/res/menu/main_activity_settings.xml
+++ b/app/src/main/res/menu/main_activity_settings.xml
@@ -2,11 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_change_units"
         android:icon="@drawable/ic_dollar"
         android:orderInCategory="99"
         android:title="@string/action_change_units"
         app:showAsAction="always" />
-
 </menu>
