--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textAppearance="@android:style/TextAppearance.Medium"
+        android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
         android:visibility="gone"
         tools:text="Error message" />
 </merge>
