--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,9 +2,9 @@
 <resources>
     <string-array name="default_stocks">
         <item>@string/default_stocks_apple</item>
-        <item>@string/default_stocks_yahoo</item>
-        <item>@string/default_stocks_microsoft</item>
-        <item>@string/default_stocks_facebook</item>
+        <!--<item>@string/default_stocks_yahoo</item>-->
+        <!--<item>@string/default_stocks_microsoft</item>-->
+        <!--<item>@string/default_stocks_facebook</item>-->
     </string-array>
 
     <string-array name="pref_fonts_options">
