--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,23 @@
 <resources>
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
+
+  <!-- Needed if we aren't including the Material Design Library -->
+  <dimen name="appbar_elevation">4dp</dimen>
+
+  <!-- Help to make us tablet beautiful -->
+  <dimen name="list_item_extra_padding">0dp</dimen>
+  <dimen name="detail_view_padding">@dimen/abc_list_item_padding_horizontal_material</dimen>
+  <dimen name="forecast_detail_padding_wide">16dp</dimen>
+  <dimen name="detail_container_bottom_margin">@dimen/detail_view_padding</dimen>
+
+  <!-- Text Sizes - We are using DP here rather than SP because these are already large
+         font sizes, and going larger will cause lots of view problems.  This is only for
+         the large forecast numbers in the forecast list -->
+  <dimen name="forecast_text_size">24dp</dimen>
+
+  <!-- This is an odd width, but we're trying to match the font closely to keep things working
+        on devices that don't yet have Roboto -->
+  <dimen name="forecast_text_width">49dp</dimen>
+  <dimen name="forecast_temperature_space">8dp</dimen>
 </resources>
