--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,7 +12,7 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:textAppearance="@android:style/TextAppearance.Medium"
-      android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
+      android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
       android:visibility="gone"
       tools:text="Error message" />
 
@@ -21,27 +21,49 @@
       android:layout_height="match_parent"
       android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/symbol"
+    <!--<TextView-->
+        <!--android:id="@+id/symbol"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--style="@style/StockHistoryTextStyle"-->
+        <!--android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:layout_marginStart="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"/>-->
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/StockSymbolTextStyle"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:layout_marginStart="@dimen/abc_list_item_padding_horizontal_material"
-        android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"/>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-      <android.support.v7.widget.RecyclerView
-          android:id="@+id/recycler_view_detail"
+      <android.support.v7.widget.Toolbar
+          android:id="@+id/toolbar"
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+          android:layout_height="wrap_content">
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <TextView
+            android:id="@+id/symbol"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/listPreferredItemHeight"
+            android:gravity="center_vertical"
+            style="@style/StockHistoryTextStyle"
+            android:text="SYMBOL"/>
+      </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_detail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
   </LinearLayout>
 
+  <ProgressBar
+      android:id="@+id/progressbar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:visibility="gone"/>
 </merge>
