--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:onClick="button"
         android:contentDescription="@string/pref_add_button_desc"
         android:src="@drawable/fab_plus"
-        app:backgroundTint="@color/material_blue_500"
+        app:backgroundTint="@color/colorAccent"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
