--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -8,7 +8,10 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:paddingEnd="16dp"
+    android:layout_marginBottom="@dimen/list_vertical_margin"
+    android:background="@drawable/touch_selector"
+    android:elevation="@dimen/appbar_elevation">
 
     <TextView
         android:id="@+id/symbol"
