--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
+  <dimen name="list_vertical_margin">4dp</dimen>
 
   <!-- Needed if we aren't including the Material Design Library -->
   <dimen name="appbar_elevation">4dp</dimen>
