--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
   <dimen name="list_vertical_margin">4dp</dimen>
+  <dimen name="list_detail_vertical_margin">8dp</dimen>
 
   <!-- Needed if we aren't including the Material Design Library -->
   <dimen name="appbar_elevation">4dp</dimen>
@@ -21,4 +22,30 @@
         on devices that don't yet have Roboto -->
   <dimen name="forecast_text_width">49dp</dimen>
   <dimen name="forecast_temperature_space">8dp</dimen>
+
+  <!-- Today Widget -->
+  <dimen name="widget_today_default_width">110dp</dimen>
+  <dimen name="widget_today_default_height">40dp</dimen>
+  <dimen name="widget_today_min_resize_width">110dp</dimen>
+  <dimen name="widget_today_min_resize_height">@dimen/widget_today_default_height</dimen>
+  <dimen name="widget_today_large_width">220dp</dimen>
+
+  <dimen name="widget_detail_default_width">250dp</dimen>
+  <dimen name="widget_detail_default_height">180dp</dimen>
+  <dimen name="widget_detail_min_resize_width">220dp</dimen>
+  <dimen name="widget_detail_min_resize_height">@dimen/widget_detail_default_height</dimen>
+
+  <!-- Text Sizes - We are using DP here rather than SP because these are already large
+         font sizes, and going larger will cause lots of view problems.  This is only for
+         the large forecast numbers in the forecast list -->
+  <dimen name="forecast_widget_text_size">24dp</dimen>
+
+  <!-- This is an odd width, but we're trying to match the font closely to keep things working
+       on devices that don't yet have Roboto -->
+  <dimen name="forecast_widget_text_width">38dp</dimen>
+
+  <!-- Icon Sizes -->
+  <dimen name="today_icon">96dp</dimen>
+  <dimen name="list_icon">40dp</dimen>
+
 </resources>
